# Qt

./: CMakeLists.txt  CMakeLists.txt.autosave  NavigationSerchBox.qml  README.md  gitignore  main.cpp
Controllers/: audiocontroller.cpp  audiocontroller.h  hvachandler.cpp  hvachandler.h  system.cpp  system.h
ui/LeftScreen/: LeftScreen.qml
